---
config:
  layout: elk
---
classDiagram
direction TB
    class Cliente {
        + clienteKey: PK
        + enderecoKey: FK
        + nome: String
        + email: String
        + cpf: String
        + telefone: String
        + dataCadastro: Date
        + statusConta: String
        + senha: String
        + login()
    }
    class Endereco {
        + enderecoKey: PK
        + cep: String
        + logradouro: String
        + numero: String
        + complemento: String
        + bairro: String
        + cidade: String
        + uf: String
    }
    class Pedido {
        + pedidoKey: PK
        + clienteKey: FK
        + enderecoEntregaKey: FK
        + dataPedido: DateTime
        + valorTotal: Decimal
        + valorFrete: Decimal
        + statusPedido: String
        + calcularTotal()
    }
    class ItemPedido {
        + pedidoKey: FK, PK
        + produtoKey: FK, PK
        + quantidade: Integer
        + precoUnitarioNaCompra: Decimal
    }
    class Produto {
        + produtoKey: PK
        + administradorKey: FK
        + nome: String
        + descricao: String
        + preco: Decimal
        + estoque: Integer
        + tags: String
        + fichaNutricional: String
        + status: String
    }
    class Pagamento {
        + pagamentoKey: PK
        + pedidoKey: FK
        + statusPagamento: String
        + idMp: String
    }
    class Administrador {
        + administradorKey: PK
        + nome: String
        + email: String
        + senha: String
        + nivelAcesso: String
    }
    Cliente "1" -- "0..1" Endereco : tem
    Cliente "1" -- "0..*" Pedido : faz
    Pedido "1" -- "1..*" ItemPedido : contém
    Produto "1" -- "0..*" ItemPedido : está_em
    Pedido "1" -- "0..*" Pagamento : pagamento
    Administrador "1" -- "0..*" Produto : gerencia